Add delete user api
